# platform-system-core

./: Makefile.am  configure.ac
adb/: Android.mk  Makefile.am  launch_adbd  services.cpp  sockets.c  start_adbd  usb_linux_client.cpp
base/: Makefile.am
charger/: charger.c
debuggerd/: Makefile.am  debuggerd.cpp  start_debuggerd  start_debuggerd64  tombstone.cpp
fs_mgr/: Makefile.am  fs_mgr_priv.h
healthd/: Android.mk  BatteryMonitor.cpp
include/: Makefile.am
include/cutils/: atomic-arm.h  atomic-inline.h  trace.h
include/log/: logprint.h  uio.h
include/private/: android_filesystem_config.h
include/system/: audio.h
include/sysutils/: FrameworkListener.h
include/utils/: KeyedVector.h  NativeHandle.h  Singleton.h  SortedVector.h  Unicode.h  Vector.h
init/: Android.mk  builtins.cpp  devices.c  devices.cpp  devices.h  init.c  init.cpp  init_parser.c  property_service.c
leproperties/: ll.c  property_service.c  property_service.h
libcutils/: Makefile.am  android_reboot.c  configure.ac  fs_config.c  klog.c  ll.c  ll.h  loghack.h  properties.c  property_config.prop  property_ops.c  property_ops.h  sched_policy.c  uevent.c
liblog/: Makefile.am  configure.ac  logd_write.c
libpixelflinger/: Android.mk
libpixelflinger/codeflinger/: ARMAssembler.h  CodeCache.h
libsync/: Makefile.am
libsysutils/: Makefile.am
libsysutils/src/: FrameworkListener.cpp  NetlinkEvent.cpp  SocketListener.cpp
libutils/: Android.mk  BlobCache.cpp  CallStack.cpp  FileMap.cpp  Looper.cpp  Makefile.am  Printer.cpp  ProcessCallStack.cpp  PropertyMap.cpp  RefBase.cpp  SharedBuffer.cpp  StopWatch.cpp  String16.cpp  String8.cpp  SystemClock.cpp  Threads.cpp  Tokenizer.cpp  VectorImpl.cpp  misc.cpp
libutils/tests/: BasicHashtable_test.cpp  BitSet_test.cpp  LruCache_test.cpp  String8_test.cpp  Unicode_test.cpp  Vector_test.cpp
libziparchive/: zip_archive.cc
libzipfile/: centraldir.c
logcat/: Makefile.am
logd/: Makefile.am  main.cpp  start_logd
logwrapper/: Makefile.am
mkbootimg/: mkbootimg.c
powerapp/: start_power_config
rootdir/: Android.mk  init.rc  ueventd.rc
rootdir/etc/: init.qcom.post_boot.sh  init.qcom.rc  init.qcom.sh  init_post_boot.service  synaptics_ts_update.sh
sdcard/: Android.mk  fuse.cpp  sdcard.c
toolbox/: df.c  lsof.c
ueventd/: devices.c  devices.h  ueventd.c  util.h
usb/: Makefile.am  setusbcomposition  start_usb  target
usb/compositions/: 901D  9022  9024  9025  902B  902D  9039  9049  9056  9057  9059  9060  9063  9064  9084  9085  9091  90A1  90A9  90AD  90CA  90CD  90D5  90D6
