BUILD_COMPONENTS :=

# Builds for both host and device
BUILD_COMPONENTS += base
#BUILD_COMPONENTS += libzarchive

if BUILD_DEVICE 
BUILD_COMPONENTS += libutils
BUILD_COMPONENTS += logwrapper
BUILD_COMPONENTS += libsync
BUILD_COMPONENTS += fs_mgr
BUILD_COMPONENTS += adb
if USE_LOGD
BUILD_COMPONENTS += logcat
BUILD_COMPONENTS += libsysutils
BUILD_COMPONENTS += logd
endif
BUILD_COMPONENTS += libbacktrace
BUILD_COMPONENTS += usb
BUILD_COMPONENTS += include
endif

if BUILD_HOST
BUILD_COMPONENTS += fastboot
endif

SUBDIRS := $(BUILD_COMPONENTS)
