# Export essential headers
systemheaders_includedir=$(includedir)/system
systemheaders_include_HEADERS := $(top_srcdir)/include/system/camera.h
systemheaders_include_HEADERS += $(top_srcdir)/include/system/graphics.h
systemheaders_include_HEADERS += $(top_srcdir)/include/system/thread_defs.h
systemheaders_include_HEADERS += $(top_srcdir)/include/system/window.h

privateheaders_includedir=$(includedir)/private
privateheaders_include_HEADERS := $(top_srcdir)/include/private/android_filesystem_config.h
